fixed text contrast

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -57,8 +57,6 @@
         margin: 0px;
         top: 20px;
         left: 20px;
-        color: #fff;
-        text-shadow: 0 0 20px black;
     }
     
     .heroButtonWrapper {
