--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -205,9 +205,11 @@ nav ul.open {display: block; order: 1;}
     margin: 0px;
     top: 20px;
     left: 20px;
-    color: #fff;
+    color: black;
     text-shadow: 0 0 20px black;
     font-size: 1.4rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
 }
 
 .heroButtonWrapper {
@@ -225,7 +227,7 @@ nav ul.open {display: block; order: 1;}
     flex: 1 1 auto;
     width: 100%;
     height: 100%;
-    background-color: #ADD8E6;
+    background-color: rgb(173, 216, 230, .8);
     border-radius: 15px;
     box-shadow: 0px 0px 10px black;
 }
